Prevent padding on mobile for search and correct text color

--- a/opentech/static_src/src/sass/apply/components/_input.scss
+++ b/opentech/static_src/src/sass/apply/components/_input.scss
@@ -2,7 +2,7 @@
     &--search {
         width: 100%;
         padding: 10px;
-        color: $color--white;
+        color: $color--dark-grey;
         background: transparent;
         border: 1px solid $color--white;
     }
